header component alignment completed

--- a/src/Header.css
+++ b/src/Header.css
@@ -21,6 +21,7 @@
     border: 0;
     text-decoration: solid;
     color: aliceblue;
+    font-size: larger;
 }
 
 .header-search{
@@ -31,6 +32,13 @@
     margin: 0 10px;
 }
 
+.search{
+    height: 20px;
+    padding: 10px;
+    border: none;
+    width: 50%;
+}
+
 .header-search-icon{
     padding: 5px;
     height: 22px;
@@ -39,6 +47,7 @@
 .header-nav{
     display: flex;
     justify-content: space-evenly;
+    
 }
 
 .nav-item{
@@ -53,19 +62,27 @@
     display: flex;
     font-size: 15px;
     font-weight: 500;
-    align-items: center;
+    font-size: medium;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    
 }
 
 .sign-in{ 
     display: flex;
     font-size: 13px;
     font-weight: 700;
-    align-items: center;
+    /* align-items: center; */
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 15px;
 }
 
 .shopping-cart{
     flex-direction: column;
     display: inline;
+    object-position: 0px 50px ;
+    padding: 0px;
 
 }
 
@@ -76,6 +93,6 @@
 }
 
 .nav-itemNumber{
-    margin-left: 10px;
+    margin-left: 20px;
     margin-right: 10px;
 }
